
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-beta10, 2011-10-19
------------------------------
#1312718 by pwolanin: fix for menu rebuild problems when installing apachesolr_search.
#1134610 by pcambra, JoeMcGuire, Ravi.J: schema support for ctools export of settings.
#1314664 by Nick_vh, brianV: fix for Search pages completely ignore the title set in the configuration.
#1314260 by Nick_vh: Fixed hook_apachesolr_query_prepare() not also correctly documented.
#1313698 by Nick_vh, denikin: Fixed Support for search of multiword content in facets/fields .
#1309572 by Nick_vh: Fixed Creating new search page gives error when trying to find the search page variable.
#1204480 by Nick_vh | chriscalip: Fixed Please update apachesolr.api.php naming convention from HOOK_ to hook_.
#1212610 by Nick_vh: Fixed Notice: Undefined index: module in apachesolr_search_form_search_form_alter().
#1309564 by Nick_vh: Fixed Simplifying syntax between isset and empty for search_box() in custom page.

Apache Solr integration 7.x-1.0-beta9, 2011-10-13
------------------------------
#1307526 by pwolanin, Nick_vh: Fixes for update path, core search functionality.
#1264786 by grndlvl: fix for double ellipses on search snippets.
#1305282 by pwolanin, Nick_vh: Fixed Search pages problems.
#1283924 by rjmackay, lazysoundsystem, jweowu: fix for notice undefined index errors.
#1305052 by cpliakas: fix for Negative facets not displayed when the mincount is 0.
#1279164 by pwolanin, fix for 'bundle' is not a required field, but apachesolr treats it as such.
#1300380 by Nick_vh, pwolanin: Search environments not clear about being active or online.
#1294846 by Nick_vh: Added Refactoring of the search pages.
#1188824 by pwolanin: fix for very large watchdog entries when index is in read-only mode.