@@ -17,9 +17,9 @@ files[] = tests/Dummy_Solr.php
 files[] = tests/solr_index_and_search.test
 files[] = tests/solr_base_query.test
 
-; Information added by drupal.org packaging script on 2011-10-20
-version = "7.x-1.0-beta10"
+; Information added by drupal.org packaging script on 2011-11-02
+version = "7.x-1.x-dev"
 core = "7.x"
 project = "apachesolr"
-datestamp = "1319070049"
+datestamp = "1320235453"
 
