@@ -459,6 +459,13 @@ function apachesolr_mark_node($nid) {
 }
 
 /**
+ * Implements hook_node_type_delete().
+ */
+function apachesolr_node_type_delete($info) {
+  apachesolr_rebuild_index_table($info->type);
+}
+
+/**
  * Implements of hook_node_type_update().
  */
 function apachesolr_node_type_update($info) {
@@ -818,6 +825,7 @@ function apachesolr_cron() {
     $n_alias = $query->innerJoin('node', 'n', 'n.nid = asn.nid');
     $query->fields($n_alias, array('nid', 'status'));
     $query->where("asn.status <> $n_alias.status");
+    $query->addTag('apachesolr_cron_update');
     $result = $query->execute();
     foreach ($result as $node) {
       apachesolr_node_update($node, FALSE);
@@ -828,6 +836,7 @@ function apachesolr_cron() {
     $query->fields('asn', array('nid'));
     $n_alias = $query->leftJoin('node', 'n', 'n.nid = asn.nid');
     $query->isNull("$n_alias.nid");
+    $query->addTag('apachesolr_cron_delete');
     $result = $query->execute();
     foreach ($result as $node) {
       apachesolr_node_delete($node, FALSE);
