@@ -10,9 +10,9 @@ files[] = apachesolr_search.module
 files[] = apachesolr_search.admin.inc
 files[] = apachesolr_search.pages.inc
 
-; Information added by drupal.org packaging script on 2011-10-20
-version = "7.x-1.0-beta10"
+; Information added by drupal.org packaging script on 2011-11-02
+version = "7.x-1.x-dev"
 core = "7.x"
 project = "apachesolr"
-datestamp = "1319070049"
+datestamp = "1320235453"
 
