@@ -181,8 +181,8 @@ function apachesolr_search_page_load($page_id) {
       if ($page->page_id == 'core_search') {
         $page->env_id = apachesolr_default_environment();
       }
+      $pages[$page_id] = $page;
     }
-    $pages[$page_id] = $page;
   }
   return $pages[$page_id];
 }
@@ -231,7 +231,7 @@ function apachesolr_search_search_info() {
   // This core search page is assumed to always be there. It cannot be deleted.
   $search_page = apachesolr_search_page_load('core_search');
 
-  // This can happen during install, or if the DB was manaually changed.
+  // This can happen during install, or if the DB was manually changed.
   if (empty($search_page)) {
     $search_page->page_title = 'Site';
     $search_page->search_path = 'search/site';
@@ -821,6 +821,9 @@ function apachesolr_search_preprocess_search_results(&$variables) {
       '@end' => $params['start'] + $params['rows'] - 1,
       '@total' => $total,
     ));
+    // Redefine the pager if it was missing
+    pager_default_initialize($total, $params['rows']);
+    $variables['pager'] = theme('pager', array('tags' => NULL));
   }
 }
 
